--- a/src/components/Introduction/Informations/styles.scss
+++ b/src/components/Introduction/Informations/styles.scss
@@ -27,6 +27,7 @@
 @media all and (max-device-width: 480px) {
   .introduction__informations {
     width: 100%;
+    height: 100%;
     padding: 25px;
 
     &__text {
