--- a/src/components/Introduction/Title/styles.scss
+++ b/src/components/Introduction/Title/styles.scss
@@ -29,6 +29,7 @@
   .introduction {
     &__title {
       width: 100%;
+      height: inherit;
 
       &__content {
         max-width: 100%;
