--- a/src/components/Introduction/styles.scss
+++ b/src/components/Introduction/styles.scss
@@ -36,5 +36,9 @@
       top: 35px;
       right: 35px;
     }
+
+    &__background {
+      height: inherit;
+    }
   }
 }
